--- a/Dungeon Escape/Assembly-CSharp.csproj
+++ b/Dungeon Escape/Assembly-CSharp.csproj
@@ -55,7 +55,10 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\Enemy\Enemy.cs" />
      <Compile Include="Assets\Scripts\Enemy\MossGiant.cs" />
+     <Compile Include="Assets\Scripts\Enemy\Skeleton.cs" />
      <Compile Include="Assets\Scripts\Enemy\Spider.cs" />
+     <Compile Include="Assets\Scripts\IDamageable.cs" />
+     <Compile Include="Assets\Scripts\Player\Attack.cs" />
      <Compile Include="Assets\Scripts\Player\Player.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerAnimation.cs" />
  <Reference Include="Cinemachine">
