--- a/Dungeon Escape/Assembly-CSharp.csproj
+++ b/Dungeon Escape/Assembly-CSharp.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\Attack.cs" />
+     <Compile Include="Assets\Scripts\Diamond.cs" />
      <Compile Include="Assets\Scripts\Enemy\AcidEffect.cs" />
      <Compile Include="Assets\Scripts\Enemy\Enemy.cs" />
      <Compile Include="Assets\Scripts\Enemy\MossGiant.cs" />
