--- a/PocketDroids/Assembly-CSharp.csproj
+++ b/PocketDroids/Assembly-CSharp.csproj
@@ -589,6 +589,8 @@
      <Compile Include="Assets\Mapbox SDK\UnityARKitPlugin\Plugins\iOS\UnityARKit\NativeInterface\UnityARSessionNativeInterface.cs" />
      <Compile Include="Assets\Mapbox SDK\UnityARKitPlugin\UnityARKitPluginSettings.cs" />
      <Compile Include="Assets\Models\Droids\Droid.cs" />
+     <Compile Include="Assets\Models\Field Objects\POI XP Bonus\FloatAndRotate.cs" />
+     <Compile Include="Assets\Models\Field Objects\POI XP Bonus\XpBonus.cs" />
      <Compile Include="Assets\Models\Player\Scripts\Player.cs" />
      <Compile Include="Assets\Scenes\World\UIManager.cs" />
      <Compile Include="Assets\Scenes\World\WorldSceneManager.cs" />
