--- a/TaticsRPCCourse/Assembly-CSharp.csproj
+++ b/TaticsRPCCourse/Assembly-CSharp.csproj
@@ -70,22 +70,27 @@
      <Compile Include="Assets\Scripts\Common\UI\LayoutAnchor.cs" />
      <Compile Include="Assets\Scripts\Common\UI\Panel.cs" />
      <Compile Include="Assets\Scripts\Controller\Battle States\BattleState.cs" />
+     <Compile Include="Assets\Scripts\Controller\Battle States\CutSceneState.cs" />
      <Compile Include="Assets\Scripts\Controller\Battle States\InitBattleState.cs" />
      <Compile Include="Assets\Scripts\Controller\Battle States\MoveSequenceState.cs" />
      <Compile Include="Assets\Scripts\Controller\Battle States\MoveTargetState.cs" />
      <Compile Include="Assets\Scripts\Controller\Battle States\SelectUnitState.cs" />
      <Compile Include="Assets\Scripts\Controller\BattleController.cs" />
+     <Compile Include="Assets\Scripts\Controller\ConversationController.cs" />
      <Compile Include="Assets\Scripts\Controller\InputController.cs" />
      <Compile Include="Assets\Scripts\Demo.cs" />
      <Compile Include="Assets\Scripts\Enums\Directions.cs" />
      <Compile Include="Assets\Scripts\EventArgs\InfoEventArgs.cs" />
      <Compile Include="Assets\Scripts\Extensions\DirectionsExtensions.cs" />
+     <Compile Include="Assets\Scripts\Model\ConversationData.cs" />
      <Compile Include="Assets\Scripts\Model\LevelData.cs" />
      <Compile Include="Assets\Scripts\Model\Point.cs" />
+     <Compile Include="Assets\Scripts\Model\SpeakerData.cs" />
      <Compile Include="Assets\Scripts\PanelTests.cs" />
      <Compile Include="Assets\Scripts\PreProduction\BoardCreator.cs" />
      <Compile Include="Assets\Scripts\View Model Component\Board.cs" />
      <Compile Include="Assets\Scripts\View Model Component\CameraRig.cs" />
+     <Compile Include="Assets\Scripts\View Model Component\ConversationPanel.cs" />
      <Compile Include="Assets\Scripts\View Model Component\Movement\FlyMovement.cs" />
      <Compile Include="Assets\Scripts\View Model Component\Movement\Movement.cs" />
      <Compile Include="Assets\Scripts\View Model Component\Movement\TeleportMovement.cs" />
