Lesson 18 - Status Effect

--- a/TaticsRPCCourse/Assembly-CSharp.csproj
+++ b/TaticsRPCCourse/Assembly-CSharp.csproj
@@ -104,10 +104,12 @@
      <Compile Include="Assets\Scripts\Exceptions\Modifiers\MaxValueModifier.cs" />
      <Compile Include="Assets\Scripts\Exceptions\Modifiers\MinValueModifier.cs" />
      <Compile Include="Assets\Scripts\Exceptions\Modifiers\Modifier.cs" />
+     <Compile Include="Assets\Scripts\Exceptions\Modifiers\MultDeltaModifier.cs" />
      <Compile Include="Assets\Scripts\Exceptions\Modifiers\MultValueModifier.cs" />
      <Compile Include="Assets\Scripts\Exceptions\Modifiers\ValueChangeException.cs" />
      <Compile Include="Assets\Scripts\Exceptions\Modifiers\ValueModifier.cs" />
      <Compile Include="Assets\Scripts\Extensions\DirectionsExtensions.cs" />
+     <Compile Include="Assets\Scripts\Extensions\GameObjectExtensions.cs" />
      <Compile Include="Assets\Scripts\Model\ConversationData.cs" />
      <Compile Include="Assets\Scripts\Model\LevelData.cs" />
      <Compile Include="Assets\Scripts\Model\Point.cs" />
@@ -117,6 +119,7 @@
      <Compile Include="Assets\Scripts\NotificationCenter\NotificationExtensions.cs" />
      <Compile Include="Assets\Scripts\PanelTests.cs" />
      <Compile Include="Assets\Scripts\PreProduction\BoardCreator.cs" />
+     <Compile Include="Assets\Scripts\StatusEffectDemo.cs" />
      <Compile Include="Assets\Scripts\TestItems.cs" />
      <Compile Include="Assets\Scripts\TestLevelGrowth.cs" />
      <Compile Include="Assets\Scripts\View Model Component\Ability\Area of Effect\AbilityArea.cs" />
@@ -140,6 +143,8 @@
      <Compile Include="Assets\Scripts\View Model Component\Board.cs" />
      <Compile Include="Assets\Scripts\View Model Component\CameraRig.cs" />
      <Compile Include="Assets\Scripts\View Model Component\ConversationPanel.cs" />
+     <Compile Include="Assets\Scripts\View Model Component\Features\AddPoisonStatusFeature.cs" />
+     <Compile Include="Assets\Scripts\View Model Component\Features\AddStatusFeature.cs" />
      <Compile Include="Assets\Scripts\View Model Component\Features\Feature.cs" />
      <Compile Include="Assets\Scripts\View Model Component\Features\StatModifierFeature.cs" />
      <Compile Include="Assets\Scripts\View Model Component\Item\Consumable.cs" />
@@ -150,6 +155,14 @@
      <Compile Include="Assets\Scripts\View Model Component\Movement\TeleportMovement.cs" />
      <Compile Include="Assets\Scripts\View Model Component\Movement\WalkMovement.cs" />
      <Compile Include="Assets\Scripts\View Model Component\StatPanel.cs" />
+     <Compile Include="Assets\Scripts\View Model Component\Status\Conditions\DurationStatusCondition.cs" />
+     <Compile Include="Assets\Scripts\View Model Component\Status\Conditions\StatusCondition.cs" />
+     <Compile Include="Assets\Scripts\View Model Component\Status\Effects\HasteStatusEffect.cs" />
+     <Compile Include="Assets\Scripts\View Model Component\Status\Effects\PoisonStatusEffect.cs" />
+     <Compile Include="Assets\Scripts\View Model Component\Status\Effects\SlowStatusEffect.cs" />
+     <Compile Include="Assets\Scripts\View Model Component\Status\Effects\StatusEffect.cs" />
+     <Compile Include="Assets\Scripts\View Model Component\Status\Effects\StopStatusEffect.cs" />
+     <Compile Include="Assets\Scripts\View Model Component\Status\Status.cs" />
      <Compile Include="Assets\Scripts\View Model Component\Tile.cs" />
      <Compile Include="Assets\Scripts\View Model Component\Unit.cs" />
  <Reference Include="Unity.ProBuilder">
